--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    font-family: 'HG Kyokashotai'	;
 }
 .form-group {
     margin-bottom: 15px;
@@ -14,7 +15,7 @@ input {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-}
+} 
 button {
     padding: 10px 20px;
     background-color: #4CAF50;
@@ -22,6 +23,7 @@ button {
     border: none;
     cursor: pointer;
 }
+,
 #result {
     margin-top: 20px;
     padding: 10px;
