--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,11 @@
+body {
+    font-family: 'HG Kyokashotai', sans-serif;
+}
+
 .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    font-family: 'HG Kyokashotai'	;
 }
 .form-group {
     margin-bottom: 15px;
