--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: 'HG Kyokashotai', sans-serif;
+}
 .container {
     max-width: 600px;
     margin: 0 auto;
@@ -14,10 +17,10 @@ input {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-}
+} 
 button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #ce721c;
     color: white;
     border: none;
     cursor: pointer;
