--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'HG Kyokashotai', sans-serif;
+    font-family: 'Noto Sans JP', Arial, sans-serif;
 }
 .container {
     max-width: 600px;
