--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,7 @@ button {
     border: none;
     cursor: pointer;
     transition: background-color 4s ease;
+    margin-right: 10px;
 }
 #result {
     margin-top: 20px;
@@ -64,4 +65,31 @@ button {
 .dark-background button {
     background-color: #1a1a1a;
     border: 1px solid #ffffff;
+}
+
+.progress-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    padding: 20px 0;
+}
+
+.step {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    margin: 0 5px;
+    background-color: #ddd;
+    border-radius: 5px;
+    opacity: 0.7;
+}
+
+.step.active {
+    background-color: #4caf50;
+    color: white;
+    opacity: 1;
+}
+
+.section {
+    display: none;
 }
