--- a/static/style2.css
+++ b/static/style2.css
@@ -10,6 +10,8 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 16px;
+    opacity: 0;
+    animation: pageLoad 0.5s ease-in forwards;
 }
 .nav-button {
     padding: 10px 20px;
@@ -110,5 +112,11 @@ h1 {
     }
     to {
         opacity: 0;
+    }
+}
+
+@keyframes pageLoad {
+    to {
+        opacity: 1;
     }
 }
