--- a/static/style2.css
+++ b/static/style2.css
@@ -12,6 +12,10 @@ body {
     font-size: 16px;
     opacity: 0;
     animation: pageLoad 0.5s ease-in forwards;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 .nav-button {
     padding: 10px 20px;
