--- a/static/style2.css
+++ b/static/style2.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Noto Sans JP', Arial, sans-serif;
     position: relative;
-    background: linear-gradient(to right, #06ff1b, #d6c803);
+    background: #06ff1b;
     min-height: 100vh;
     margin: 0;
     transition: color 4s ease;
